[package]
name = "cell-ref"
version = "0.1.0"
edition = "2018"
description = "Cell type with methods for by-reference mutation"
documentation = "https://docs.rs/cell-ref"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/cell-ref"
license = "Apache-2.0"
keywords = ["cell", "reference", "mutate", "default", "copy"]
categories = ["no-std"]
